# Mixmancer

./: .gitignore  README.md  app.py  coverage.xml  db.txt  hexmap.py  main.py  pyproject.toml  requirements.txt  settings.txt  start.bat  start.sh  test_client.py
assets/dice/: metadata_maker.py
assets/dice/d20/: d20_14.json  d20_15.json  d20_16.json  d20_17.json  d20_3.json  single_roll.json
assets/dice/fx/: red_halo.json
assets/map/: explore.txt  history.txt
map/: history.txt
mixmancer/: config.py  exceptions.py  image.py  music.py  utils.py
mixmancer/api/: api.py
mixmancer/config/: data_models.py  parameters.py  schema.py  settings.json  settings.py  settings_backup.json
mixmancer/display/: convert_dds.py  dice.py  effects.py  hexmap.py  image.py  sprite.py  utils.py
mixmancer/gui/: button.py  commands.py  controller.py  frames.py  popup.py  theme.py
mixmancer/music/: music.py
mixmancer/sound/: mixer.py
mp3/: ffmpeg.txt
py/: hexmap.py  image.py  music.py
tests/: test_client.py  test_config_settings.py  test_display_hexmap.py  test_display_image.py  test_gui_commands.py  test_gui_controller.py  test_gui_frames.py  test_gui_popup.py  test_gui_theme.py  test_server.py
