[tool.poetry]
name = "mixmancer"
version = "0.1.0"
description = ""
authors = ["Justin Leighton <justinthomas.leighton@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pygame = "^2.5.2"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
